--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ tasks.register('collect', Copy) {
     destinationDir = file('build/libs')
     // TODO arch loom updates from project(':bootstrap').tasks.forgeJar.outputs
     from project(':bootstrap').tasks.neoforgeJar.outputs
-    from project(':bootstrap').tasks.fabricJar.outputs
+    //from project(':bootstrap').tasks.fabricJar.outputs
 }
 
 def gitBranch() {
