--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -23,16 +23,13 @@ sourceSets {
             runtimeClasspath += main.runtimeClasspath
         }
     }
-    fabric {}
 }
 
 configurations {
     installer
-    installerFabric
     embedCommon
-    embedFabric
     embed
-    embed.extendsFrom(embedCommon, embedFabric)
+    embed.extendsFrom(embedCommon)
     gson
     implementation.extendsFrom(embed, gson)
 }
@@ -52,23 +49,23 @@ repositories {
 }
 
 def installerLibs = [/*"org.spongepowered:mixin:$mixinVersion", */ 'org.yaml:snakeyaml:2.2',
-                 'org.xerial:sqlite-jdbc:3.42.0.1', 'com.mysql:mysql-connector-j:8.1.0',
-                 /*'commons-lang:commons-lang:2.6',*/ 'com.googlecode.json-simple:json-simple:1.1.1',
-                 'org.apache.logging.log4j:log4j-jul:2.19.0', 'net.md-5:SpecialSource:1.11.3',
-                 'org.jline:jline-terminal-jansi:3.12.1',/* 'org.fusesource.jansi:jansi:1.18',*/
-                 /*'org.jline:jline-terminal:3.12.1', 'org.jline:jline-reader:3.12.1',*/
-                 'jline:jline:2.12.1', 'org.apache.maven:maven-resolver-provider:3.8.5',
-                 'org.apache.maven.resolver:maven-resolver-connector-basic:1.7.3', 'org.apache.maven.resolver:maven-resolver-transport-http:1.7.3',
-                 'org.apache.maven:maven-model:3.8.5', 'org.codehaus.plexus:plexus-utils:3.3.0',
-                 'org.apache.maven:maven-model-builder:3.8.5', 'org.codehaus.plexus:plexus-interpolation:1.26',
-                 'org.eclipse.sisu:org.eclipse.sisu.inject:0.3.4', 'org.apache.maven:maven-builder-support:3.8.5',
-                 'org.apache.maven:maven-repository-metadata:3.8.5', 'org.apache.maven.resolver:maven-resolver-api:1.6.3',
-                 'org.apache.maven.resolver:maven-resolver-spi:1.6.3', 'org.apache.maven.resolver:maven-resolver-util:1.6.3',
-                 'org.apache.maven.resolver:maven-resolver-impl:1.6.3', 'org.apache.httpcomponents:httpclient:4.5.13',
-                 'org.apache.httpcomponents:httpcore:4.4.14', 'commons-codec:commons-codec:1.15',
-                 'org.slf4j:jcl-over-slf4j:1.7.30', /*'org.apache.logging.log4j:log4j-slf4j18-impl:2.14.1',*/
-                 'org.spongepowered:configurate-hocon:3.6.1', 'org.spongepowered:configurate-core:3.6.1',
-                 'com.typesafe:config:1.3.1', 'javax.inject:javax.inject:1']
+                     'org.xerial:sqlite-jdbc:3.42.0.1', 'com.mysql:mysql-connector-j:8.1.0',
+                     /*'commons-lang:commons-lang:2.6',*/ 'com.googlecode.json-simple:json-simple:1.1.1',
+                     'org.apache.logging.log4j:log4j-jul:2.19.0', 'net.md-5:SpecialSource:1.11.3',
+                     'org.jline:jline-terminal-jansi:3.12.1',/* 'org.fusesource.jansi:jansi:1.18',*/
+                     /*'org.jline:jline-terminal:3.12.1', 'org.jline:jline-reader:3.12.1',*/
+                     'jline:jline:2.12.1', 'org.apache.maven:maven-resolver-provider:3.8.5',
+                     'org.apache.maven.resolver:maven-resolver-connector-basic:1.7.3', 'org.apache.maven.resolver:maven-resolver-transport-http:1.7.3',
+                     'org.apache.maven:maven-model:3.8.5', 'org.codehaus.plexus:plexus-utils:3.3.0',
+                     'org.apache.maven:maven-model-builder:3.8.5', 'org.codehaus.plexus:plexus-interpolation:1.26',
+                     'org.eclipse.sisu:org.eclipse.sisu.inject:0.3.4', 'org.apache.maven:maven-builder-support:3.8.5',
+                     'org.apache.maven:maven-repository-metadata:3.8.5', 'org.apache.maven.resolver:maven-resolver-api:1.6.3',
+                     'org.apache.maven.resolver:maven-resolver-spi:1.6.3', 'org.apache.maven.resolver:maven-resolver-util:1.6.3',
+                     'org.apache.maven.resolver:maven-resolver-impl:1.6.3', 'org.apache.httpcomponents:httpclient:4.5.13',
+                     'org.apache.httpcomponents:httpcore:4.4.14', 'commons-codec:commons-codec:1.15',
+                     'org.slf4j:jcl-over-slf4j:1.7.30', /*'org.apache.logging.log4j:log4j-slf4j18-impl:2.14.1',*/
+                     'org.spongepowered:configurate-hocon:3.6.1', 'org.spongepowered:configurate-core:3.6.1',
+                     'com.typesafe:config:1.3.1', 'javax.inject:javax.inject:1']
 
 def installerLibsFabric = [
         'net.minecrell:terminalconsoleappender:1.2.0',
@@ -100,22 +97,22 @@ dependencies {
     neoforgeImplementation 'net.neoforged.fancymodloader:loader:4.0.1'
     neoforgeImplementation 'cpw.mods:securejarhandler:2.1.24'
 
-    fabricImplementation "net.fabricmc:fabric-loader:$fabricLoaderVersion"
+    //fabricImplementation "net.fabricmc:fabric-loader:$fabricLoaderVersion"
 
     for (def lib : installerLibs) {
         installer lib
     }
-    for (def lib : installerLibsFabric) {
+    /*for (def lib : installerLibsFabric) {
         installerFabric lib
-    }
+    }*/
 
     gson 'com.google.code.gson:gson:2.9.0'
     embedCommon "io.izzel:tools:$toolsVersion"
     embedCommon "io.izzel.arclight:arclight-api:$apiVersion"
     embedCommon 'commons-lang:commons-lang:2.6@jar'
     embedCommon(project(':i18n-config')) { transitive = false }
-    embedFabric("io.izzel.arclight:mixin-tools:$mixinToolsVersion") { transitive = false }
-    embedFabric(project(':installer')) { transitive = false }
+    //embedFabric("io.izzel.arclight:mixin-tools:$mixinToolsVersion") { transitive = false }
+    //embedFabric(project(':installer')) { transitive = false }
 }
 
 jar {
@@ -225,11 +222,11 @@ tasks.register("generateInstallerInfo", GenerateInstallerInfo) {
     def installer = file("build/arclight_installer/META-INF/installer.json")
     outputs.file(installer)
     configuration = project.configurations.installer
-    fabricExtra = project.configurations.installerFabric
+    //fabricExtra = project.configurations.installerFabric
 }
 
 project.sourceSets.main.output.dir file("build/arclight_installer"), builtBy: tasks.generateInstallerInfo
-project.sourceSets.fabric.output.dir file("build/arclight_installer"), builtBy: tasks.generateInstallerInfo
+//project.sourceSets.fabric.output.dir file("build/arclight_installer"), builtBy: tasks.generateInstallerInfo
 
 project.sourceSets.forge.output.dir file("build/forge_async_catcher"), builtBy: tasks.register('forgeAsyncCatcher', RenameAsyncCatcherTask) {
     inputFile.set project.file("async_catcher.json")
@@ -243,11 +240,11 @@ project.sourceSets.neoforge.output.dir file("build/neoforge_async_catcher"), bui
     outputs.file("build/neoforge_async_catcher/async_catcher.json")
 }
 
-project.sourceSets.fabric.output.dir file("build/fabric_async_catcher"), builtBy: tasks.register('fabricAsyncCatcher', RenameAsyncCatcherTask) {
+/*project.sourceSets.fabric.output.dir file("build/fabric_async_catcher"), builtBy: tasks.register('fabricAsyncCatcher', RenameAsyncCatcherTask) {
     inputFile.set project.file("async_catcher.json")
     mapping.set "intermediary"
     outputs.file("build/fabric_async_catcher/async_catcher.json")
-}
+}*/
 
 compileJava {
     sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
