--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -67,7 +67,7 @@ def installerLibs = [/*"org.spongepowered:mixin:$mixinVersion", */ 'org.yaml:sna
                      'org.spongepowered:configurate-hocon:3.6.1', 'org.spongepowered:configurate-core:3.6.1',
                      'com.typesafe:config:1.3.1', 'javax.inject:javax.inject:1']
 
-def installerLibsFabric = [
+/*def installerLibsFabric = [
         'net.minecrell:terminalconsoleappender:1.2.0',
         'org.jline:jline-terminal:3.12.1',
         'org.jline:jline-reader:3.12.1',
@@ -75,7 +75,7 @@ def installerLibsFabric = [
         'org.apache.maven:maven-artifact:3.8.5',
         "net.fabricmc:intermediary:$minecraftVersion",
         "net.fabricmc.fabric-api:fabric-api:$fabricApiVersion"
-]
+]*/
 
 dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
