--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -85,7 +85,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
     implementation 'org.jetbrains:annotations:23.0.0'
-    implementation 'org.spongepowered:mixin:0.8.5'
+    //implementation 'org.spongepowered:mixin:0.8.5'
     implementation 'org.apache.logging.log4j:log4j-jul:2.17.2'
 
     forgeImplementation "net.minecraftforge:fmlloader:${minecraftVersion}-${forgeVersion}"
