--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ allprojects {
     ext {
         minecraftVersion = '1.21.1'
         supportedPlatforms = ['forge', 'neoforge', 'fabric']
-        fabricLoaderVersion = '0.16.2'
-        fabricApiVersion = '0.102.1+1.21.1'
+        //fabricLoaderVersion = '0.16.2'
+        //fabricApiVersion = '0.102.1+1.21.1'
         forgeVersion = '52.0.4'
         neoForgeVersion = '21.1.31'
         apiVersion = '1.7.3'
